# Python-Tutorial

./: .gitignore  .gitmodules  AGENTS.md  CH08-OOP.ppt  CLAUDE.md  Lecture_4.ppt  README.md  aa.xml  class-eg-classmethods.py  class-eg-inheritance.py  class-eg.py  class-examples.py  decorator-examples.py  dictionary.py  fileio-examples.py  finetune-LLM-with-qlora.py  flan-t5-scan-inferencer.py  flan-t5-scan-summarization.py  flan-t5-setup.sh  how-to-work-with-Mistral-7B-instruct.ipynb  how-to-work-with-Mistral-7B-instruct.py  indian_flag.py  iterators-generators-eg.py  logging-example.py  modules-examples.py  multiprocessing-example.py  mysql_config.ini  os-examples.py  plot_helper.py  pyproject.toml  race-condition-example.py  regex-examples.py  regex.txt  send-email-example.py  sqltest.py  starters.py  temp.py  test.py  test2.py  test_openrouter.py  (+6 more)
.claude/: settings.json  validate-lesson.sh
data/: Churn.csv  PCA.csv  PCA1.csv  PCA2.csv
demo/: functions_example.py
lessons/: linear_regression.md  xgboost.md
notebooks/: ANOVA F test.ipynb  Bias Variance Tradeoff.ipynb  Chi Square.ipynb  Churn - Bagging of Logistic.ipynb  Churn - Boosting of Decision Trees.ipynb  Clustering - Hierarachical.ipynb  Clustering - KMeans.ipynb  Decision Trees.ipynb  EigenVectors.ipynb  Encoding_Techniques.ipynb  K Nearest Neighbor Classification and Regression.ipynb  Logistic Regression - Churn.ipynb  Logistic Regression - IRIS.ipynb  Matrices.ipynb  Model Selection And Validation.ipynb  NLTK examples.ipynb  Naive_Bayes_Classifier_Tutorial.ipynb  PCA.ipynb  Perceptron Learning.ipynb  (+21 more)
(+39 files in other folders)
