[project]
name = "python-tutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.5",
    "ipywidgets>=8.1.8",
    "jupytext>=1.19.2",
    "kaggle>=2.1.2",
    "peft==0.9.0",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=5.8.1",
]
